--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -31,8 +31,10 @@ html {
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
-}
+  font-family: "Playwrite AU SA", cursive;
+  font-optical-sizing: auto;
+  font-weight: 200;
+  font-style: normal;}
 
 /* Scroll bar */
 ::-webkit-scrollbar {
@@ -319,7 +321,7 @@ h3 {
   background-color: #fff;
   padding: 20px;
   min-width: 300px;
-  box-shadow: 0px 0px 5px 0px;
+  box-shadow: 0px 5px 30px 0px rgb(148 146 245 / 15%);
   border-radius: 8px;
   text-align: left;
   margin: 10px;
@@ -454,7 +456,6 @@ h3 {
   background-color: var(--footer-bg-color);
   color: var(--footer-text-color);
   padding: 25px 0px;
-  font-family: Arial, sans-serif;
 }
 
 .footerA {
