--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,22 +1,22 @@
 :root {
-  --primary-color: #806A52;
-  --secondary-color: #c5ab77;
+  --primary-color: #576b62;
+  --secondary-color: #819089;
   --accent-color: #3d010c;
-  --hover-color: #cc3d00;
+  --hover-color: black;
   --text-color: #555;
-  --background-color: #f4f4f4;
-  --border-color: #ffffff;
-  --star-color: #996300;
+  --background-color: white;
+  --border-color: white;
+  --star-color: #819089;
   --button-bg-color: #3d010c;
-  --button-hover-bg-color: #cc3d00;
-  --footer-bg-color: #333;
-  --footer-text-color: #baab94;
+  --button-hover-bg-color: #54615b;
+  --footer-bg-color: #819089;
+  --footer-text-color: white;
   --footer-link-hover-color: #704d03;
   --scrollbar-bg-color: #f1f1f1;
   --scrollbar-thumb-color: #888;
   --scrollbar-thumb-hover-color: #555;
-  --service-item-bg-color: #f4f4f4;
-  --partner-item-bg-color: #f8f8f8;
+  --trans-background-color: #576b6262;
+  --color-white: white;
 }
 
 * {
@@ -52,7 +52,7 @@ body {
 }
 
 li a:hover {
-  color: white;
+  color: var(--hover-color);
   transition: color 0.3s ease-in-out;
 }
 
@@ -63,7 +63,7 @@ li a:hover {
   padding: 10px;
   padding-bottom: 0px;
   background-color: var(--secondary-color);
-  color: white;
+  color: var(--color-white);
   position: fixed;
   transition: all 0.3s ease-in-out;
   width: 100%;
@@ -79,7 +79,7 @@ li a:hover {
   font-size: 1.5rem;
   font-weight: bold;
   text-decoration: none;
-  color: white;
+  color: var(--color-white);
 }
 
 /* Navbar */
@@ -98,7 +98,7 @@ li a:hover {
 
 .nav a {
   text-decoration: none;
-  color: black;
+  color: var(--color-white);
   font-weight: 600;
   padding: 10px;
 }
@@ -219,10 +219,6 @@ h3 {
   cursor: pointer;
 }
 
-.hero-bloc-text a:hover {
-  color: #3d010c;
-  transition: color 0.2s ease-in-out;
-}
 
 /* Service Section */
 .service-list {
@@ -234,7 +230,7 @@ h3 {
 
 .service-item {
   width: 25%;
-  background-color: var(--service-item-bg-color);
+  background-color: var(--background-color);
   border-radius: 5px;
   padding: 30px;
   box-shadow: 0px 5px 30px 0px rgb(148 146 245 / 15%);
@@ -263,7 +259,7 @@ h3 {
 }
 
 .btn:hover {
-  color: white;
+  color: var(--hover-color);
   background-color: var(--button-hover-bg-color);
   transform: scale(1.05);
 }
@@ -276,23 +272,23 @@ h3 {
 }
 /* Titres */
 .container-why h2 {
-    color: white;
+    color: var(--color-white);
     font-size: 28px;
     margin-bottom: 10px;
 }
 
 .container-why h3 {
   font-size: 18px;
-  color: white;
+  color: var(--color-white);
   margin-bottom: 10px;
 }  
 .container-why h4 {
     font-size: 15px;
-    color: white;
+    color: var(--color-white);
     margin-bottom: 20px;
 }   
 .thecar-theme-reservation-area{
-    background: #c5ab7799;
+    background-color: var(--trans-background-color) ;
     padding: 15px;
     border-radius: 20px;
     backdrop-filter: blur(15px);
@@ -435,7 +431,7 @@ h3 {
   margin-top: 20px;
   padding: 10px 25px;
   background-color: var(--primary-color);
-  color: white;
+  color: var(--color-white);
   border: none;
   cursor: pointer;
   font-size: 1rem;
@@ -443,12 +439,14 @@ h3 {
 }
 
 .flip-btn:hover {
-  background-color: #64503b;
+  background-color: var(--button-hover-bg-color);
 }
 
 .blog-card-front h3,
-.blog-card-back h3 {
-  color: black !important;
+.blog-card-back h3,
+.blog-card-text,
+.blog-card-back li {
+  color: var(--color-white) !important;
 }
 
 /* Footer Section */
@@ -462,13 +460,13 @@ h3 {
   width: 40px;
   height: 40px;
   transition: transform 0.3s ease-in-out;
-  color: white;
+  color: var(--color-white);
   padding: 5px;
   border-radius: 10px;
   background: rgb(255, 255, 255);
-  background: -moz-linear-gradient(156deg, rgba(255, 255, 255, 1) 20%, #704d03 100%);
-  background: -webkit-linear-gradient(156deg, rgba(255, 255, 255, 1) 20%, #704d03 100%);
-  background: linear-gradient(156deg, rgba(255, 255, 255, 1) 20%, #704d03 100%);
+  background: -moz-linear-gradient(156deg, rgba(255, 255, 255, 1) 20%, #819089 100%);
+  background: -webkit-linear-gradient(156deg, rgba(255, 255, 255, 1) 20%, #819089 100%);
+  background: linear-gradient(156deg, rgba(255, 255, 255, 1) 20%, #819089 100%);
 }
 
 .footerA:hover {
