--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -9,7 +9,7 @@
   --star-color: #819089;
   --button-bg-color: #3d010c;
   --button-hover-bg-color: #54615b;
-  --footer-bg-color: #819089;
+  --footer-bg-color: #576b62;
   --footer-text-color: white;
   --footer-link-hover-color: #704d03;
   --scrollbar-bg-color: #f1f1f1;
@@ -181,7 +181,7 @@ li a:hover {
 }
 
 .bloc-hero {
-  background: rgba(255, 255, 255, 0.2);
+  background-color: var(--trans-background-color) ;
   padding: 15px;
   border-radius: 20px;
   backdrop-filter: blur(15px);
@@ -297,7 +297,7 @@ h3 {
 #avis {
   padding: 60px 20px;
   text-align: center;
-  background-color: #fff;
+  background-color: var(--background-color);
   overflow: hidden;
 }
 
@@ -314,7 +314,7 @@ h3 {
 }
 
 .avis-card {
-  background-color: #fff;
+  background-color: var(--background-color);
   padding: 20px;
   min-width: 300px;
   box-shadow: 0px 5px 30px 0px rgb(148 146 245 / 15%);
@@ -360,7 +360,7 @@ h3 {
   width: 26%;
   box-sizing: border-box;
   margin-bottom: 20px;
-  min-height: 600px;
+  min-height: 650px;
 }
 
 .blog-card {
@@ -463,10 +463,10 @@ h3 {
   color: var(--color-white);
   padding: 5px;
   border-radius: 10px;
-  background: rgb(255, 255, 255);
-  background: -moz-linear-gradient(156deg, rgba(255, 255, 255, 1) 20%, #819089 100%);
-  background: -webkit-linear-gradient(156deg, rgba(255, 255, 255, 1) 20%, #819089 100%);
-  background: linear-gradient(156deg, rgba(255, 255, 255, 1) 20%, #819089 100%);
+  background: var(--color-white);
+  background: -moz-linear-gradient(156deg, var(--color-white) 20%, var(--secondary-color) 100%);
+  background: -webkit-linear-gradient(156deg, var(--color-white) 20%, var(--secondary-color) 100%);
+  background: linear-gradient(156deg, var(--color-white) 20%, var(--secondary-color) 100%);
 }
 
 .footerA:hover {
