--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -105,7 +105,7 @@ li a:hover {
 
 .menu {
   --s: 35px;
-  --c: black;
+  --c: var(--color-white);
   height: var(--s);
   width: var(--s);
   border: none;
