--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -529,10 +529,10 @@ h3 {
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   background-position: center center;
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-image: url(/public/assets/images/Palais_de_justice_de_Marseille.jpg);
+  background-image: url(/public/assets/images/Palais_de_justice_de_Marseille.webp);
   z-index: 1;
   position: relative;
   border-radius: 20px;
