--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -31,7 +31,9 @@ body {
   font-family: "Playwrite AU SA", cursive;
   font-optical-sizing: auto;
   font-weight: 200;
-  font-style: normal;}
+  font-style: normal;
+  user-select: none;
+}
 
 /* Scroll bar */
 ::-webkit-scrollbar {
